// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./packages/components/src/brick-container/demo/component-class.md correctly 1`] = `
<div>
  <div>
    element
  </div>
  <span>
    hello world
  </span>
</div>
`;

exports[`renders ./packages/components/src/brick-container/demo/component-fc.md correctly 1`] = `
<div>
  <div>
    element
  </div>
  <div>
    hello world
  </div>
</div>
`;

exports[`renders ./packages/components/src/brick-container/demo/div.md correctly 1`] = `
<div>
  hello world
</div>
`;

exports[`renders ./packages/components/src/brick-container/demo/span.md correctly 1`] = `
<span>
  hello world
</span>
`;
